syntax = "proto3";

package movie_crud;

option go_package = "./proto";

message Movie{
    int32 id = 1;
    string title = 2;
    string genre = 3;
}

service MovieService{
    rpc CreateMovie(CreateMovieRequest) returns (CreateMovieResponse);
    rpc GetMovie(GetMovieRequest) returns (GetMovieResponse);
    rpc GetMovies(GetMoviesRequest) returns (GetMoviesResponse);
    rpc UpdateMovie(UpdateMovieRequest) returns (UpdateMovieResponse);
    rpc DeleteMovie(DeleteMovieRequest) returns (DeleteMovieResponse);
}

message CreateMovieRequest{
    Movie movie = 1;
}

message CreateMovieResponse{
    Movie movie = 1;
}

message GetMovieRequest{
    string id = 1;
}

message GetMovieResponse{
    Movie movie = 1;
}

message GetMoviesRequest{}

message GetMoviesResponse{
    repeated Movie movies = 1;
}

message UpdateMovieRequest{
    Movie movie = 1;
}

message UpdateMovieResponse{
    Movie movie = 1;
}

message DeleteMovieRequest{
    string id = 1;
}

message DeleteMovieResponse{
    bool success = 1;
}